--- a/app/web/styles/style.less
+++ b/app/web/styles/style.less
@@ -1,22 +1,22 @@
-// get the page ready
-* { outline: none; box-sizing: border-box; }
-body { padding: 0; margin: 0; }
-html, body, .react-native-web { height: 100%; width: 100%; position: absolute; top: 0; right: 0; overflow: hidden;}
-body, button, input {
-  font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
-  font-size: 1em;
+.search-bar {
+  margin: 20px;
+  text-align: center;
 }
 
-// let the real CSS begin
-.react-native-web {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
+.search-bar input {
+  width: 75%;
+}
 
-  .hello-world {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 50%;
-  }
+.video-detail .details {
+  margin-top: 10px;
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+.list-group-item {
+  cursor: pointer;
+}
+
+.list-group-item:hover {
+  background-color: #eee;
 }
